tests/baselines/reference/objectLiteralShorthandPropertiesAssignment2.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignment2.ts(4,5): error TS2322: Type '{ name: string; id: number; }' is not assignable to type '{ b: string; id: number; }'.
  Property 'b' is missing in type '{ name: string; id: number; }'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignment2.ts (1 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person: { b: string; id: number } = { name, id };  // error
        ~~~~~~
!!! error TS2322: Type '{ name: string; id: number; }' is not assignable to type '{ b: string; id: number; }'.
!!! error TS2322:   Property 'b' is missing in type '{ name: string; id: number; }'.
    